quick/dialogbackground: Ensure we delete the SVG item

It is rather unclear how ownership is here and when the SVG is deleted.
So make sure to request deletion if the background object is deleted.

BUG: 486743


(cherry picked from commit 9ed348547fadf64fe007ebc065f689154378d09a)

Co-authored-by: Arjen Hiemstra <ahiemstra@heimr.nl>